gcc/testsuite/rust/rustc/ui/attributes/main-removed-1_dg.rs
#[main]  // { dg-error "" "" { target *-*-* } }
fn main() {}

